Update: Change of label

--- a/Assignment_22027453.ipynb
+++ b/Assignment_22027453.ipynb
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -101,7 +101,7 @@
     "# Download and load the image dataset from CIFAR10 packages\n",
     "torch.manual_seed(0)\n",
     "CIF_dataset = CIFAR10(os.getcwd(), transform = transforms.ToTensor(), download = True) # CIFAR dataset\n",
-    "classes = ['apple', 'cloud', 'dolphin', 'seal', 'deer', 'rocket', 'streetcar', 'horse', 'baby', 'truck']"
+    "classes = ['airplane', 'automobile', 'bird', 'cat', 'deer', 'dog', 'frog', 'horse', 'ship', 'truck']"
    ]
   },
   {
@@ -130,7 +130,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We now have the selected random classes: 3, 2, and 7. The classes will be assigned for dolphin, cloud, and streetcar"
+    "We now have the selected random classes: 3, 2, and 7. The classes will be assigned for bird, automobile, and frog"
    ]
   },
   {
