val_loader and train_loader variable fixed

--- a/Assignment_22027453.ipynb
+++ b/Assignment_22027453.ipynb
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -291,7 +291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -309,8 +309,8 @@
    "source": [
     "def AutoEncoder_model_training(optimiser, model,\n",
     "                               Loss_function,\n",
-    "                               trainloader, \n",
-    "                               valloader,\n",
+    "                               train_loader, \n",
+    "                               val_loader,\n",
     "                               n_epochs = 10, fplotloss = True, #fdraw = False,\n",
     "                               filename = ''):\n",
     "    train_on_gpu = torch.cuda.is_available()\n",
@@ -334,7 +334,7 @@
     "\n",
     "        # for train model\n",
     "        model.train()\n",
-    "        for data, target in trainloader:\n",
+    "        for data, target in train_loader:\n",
     "            if train_on_gpu:\n",
     "                data, target = data.cuda(), target.cuda()\n",
     "\n",
@@ -358,7 +358,7 @@
     "\n",
     "        # validate the model\n",
     "        model.eval()\n",
-    "        for data, target in valloader:\n",
+    "        for data, target in val_loader:\n",
     "            if train_on_gpu:\n",
     "                data, target = data.cuda(), target.cuda()\n",
     "\n",
@@ -372,8 +372,8 @@
     "            val_Loss += Batch_Loss.item() * data.size(0)\n",
     "\n",
     "        # Calculate avg losses\n",
-    "        train_Loss = train_Loss / len(trainloader.dataset)\n",
-    "        val_Loss = val_Loss / len(valloader.dataset)\n",
+    "        train_Loss = train_Loss / len(train_loader.dataset)\n",
+    "        val_Loss = val_Loss / len(val_loader.dataset)\n",
     "\n",
     "        # append the Loss values to the Loss lists declared\n",
     "        train_LossList.append(train_Loss)\n",
